# hoyo-update-notifier

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  hun.db-shm  hun.db-wal  pm2.json  pyproject.toml  ruff.toml  run.py  schedule.py  tutorial.md
.github/workflows/: docker.yml  main.yml
hoyo_update_notifier/: constants.py  logging.py  web_app.py  webhook.py
hun/: __init__.py  api.py  constants.py  index.html  models.py  scheduler.py  schemas.py  utils.py  web_app.py  webhook.py
