[project]
name = "hoyo-update-notifier"
version = "2.0.0"
description = "Notify via Discord webhook whenever a Hoyoverse game is updated, in maintenance, or has preload available."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "apscheduler>=3.10.4",
    "fastapi>=0.115.2",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.2.1",
    "semver>=3.0.4",
    "tortoise-orm>=0.21.7",
    "uvicorn>=0.32.0",
]
license = { file = "LICENSE" }
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
